fix: #39 TAGO 도착 요청 flight state 조정